--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "puppeteer-core": "^19.7.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
