--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "puppeteer-core": "^19.7.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-windowed-select": "^5.1.0",
