--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-windowed-select": "^5.1.0",
+    "sweetalert2": "^11.7.32",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
